--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "eslint": "^8.41.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5"
+  },
+  "dependencies": {
+    "commander": "^10.0.1"
   }
 }
