--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-node@v3
       - run: make install
       - run: make lint
-      - run: npm run test
+      - run: make test
       - uses: actions/setup-node@v3
         with: 
           node-version: 18
