--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,10 +21,12 @@ jobs:
           node-version: 18
           cache: 'npm'
       - uses: actions/checkout@master
-      - uses: snyk/actions/node@master
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      - uses: paambaati/codeclimate-action@v4.0.0
+      - name: Test & publish code coverage
+        uses: paambaati/codeclimate-action@v4.0.0
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TOKEN }}
       
