--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,5 @@ jobs:
         with:
           coverageCommand: make test
           debug: true
-      
+          coverageLocations: |
+            ${{github.workspace}}/*.lcov:lcov
