--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Actions Status](https://github.com/dearasheville/backend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/dearasheville/backend-project-46/actions)",
   "main": "index.js",
   "scripts": {
-    "test": "npx jest --bail"
+    "test": "npx jest"
   },
   "repository": {
     "type": "git",
