--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.1.0",
   "description": "[![Actions Status](https://github.com/dearasheville/backend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/dearasheville/backend-project-46/actions)",
-  "main": "index.js",
+  "main": "src/gendiff.js",
   "scripts": {
     "test": "npx jest"
   },
