--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,5 @@ jobs:
         env:
           CC_TEST_REPORTER_ID: ${{ secrets.CC_TOKEN }}
         with:
-          coverageCommand: make test
+          coverageCommand: make test-coverage
+          debug: true
