--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,8 @@
 name: main
 
-on: 
-  push:
-    branches:
-      - '**'
-    tags:
-      - '**'
+on:
+  - push
+  - pull_request
 
 env:
   CI: true
