--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@hexlet/code",
   "version": "0.1.0",
   "description": "[![Actions Status](https://github.com/dearasheville/backend-project-46/workflows/hexlet-check/badge.svg)](https://github.com/dearasheville/backend-project-46/actions)",
-  "main": "src/gendiff.js",
+  "main": "index.js",
   "scripts": {
     "test": "npx jest"
   },
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "commander": "^10.0.1",
+    "js-yaml": "^4.1.0",
     "lodash": "^4.17.21"
   }
 }
