minor edits to improve readability

--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "simple-git-hooks": "^2.8.1"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "commander": "^10.0.1",
-    "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21"
+    "js-yaml": "^4.1.0"
   }
 }
